@@ -1,3 +1,8 @@
+2008-05-20  Adam Nemet  <anemet@caviumnetworks.com>
+
+	PR middle-end/36194
+	* gcc.dg/pr36194.c: New test.
+
 2008-05-19  Release Manager
 
 	* GCC 4.2.4 released.
